--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!------------------------------------------------------------------------->
     <header class="overflow-hidden relative">
       <div
-        class="bg-[rgb(255,243,228)] rounded-b-[50%] w-[150vw] -translate-x-[25vw] flex flex-col justify-center items-center overflow-hidden relative"
+        class="bg-[rgb(255,243,228)] rounded-b-[50%] w-[150vw] -ml-[25vw] flex flex-col justify-center items-center overflow-hidden"
       >
         <!-- on less than medium screens hamburger -->
         <nav
@@ -38,20 +38,20 @@
             />
           </figure>
 
-          <button class="text-[orange]" id="nav-open-btn">
-            <i class="fas fa-bars text-4xl"></i>
+          <button class="text-[orange]">
+            <i class="fas fa-bars text-4xl" id="nav-open-btn"></i>
           </button>
         </nav>
 
         <!-- nav above medium screens -->
         <nav
-          class="flex flex-col fixed z-10 bg-[rgb(255,243,228)] top-0 left-[25vw] w-[25rem] h-full shadow-card -translate-x-[25rem] transition-all ease-in md:translate-x-0 md:shadow-none md:justify-between md:flex-row md:items-center md:h-[15vh] md:w-[110rem] md:max-w-[60%] md:left-auto md:relative"
+          class="flex flex-col fixed z-10 bg-[rgb(255,243,228)] top-0 left-0 w-full h-full shadow-card transition-all ease-in -translate-x-[100%] md:translate-x-0 md:shadow-none md:justify-between md:flex-row md:items-center md:h-[15vh] md:w-[110rem] md:max-w-[60%] md:left-auto md:relative"
           id="nav-small-screen"
         >
           <div
-            class="flex justify-between items-center mt-5 px-5 md:mt-0 md:px-0"
+            class="flex justify-between items-center mt-8 px-5 md:mt-0 md:px-0"
           >
-            <figure class="md:h-12 h-10">
+            <figure class="md:h-12 h-12">
               <img
                 src="./images/pair-time.svg"
                 alt="Company Logo"
@@ -60,7 +60,7 @@
               />
             </figure>
             <button
-              class="text-4xl text-orange-500 md:hidden"
+              class="text-4xl text-[#FF5F1F] font-normal md:hidden"
               id="nav-close-btn"
             >
               <i class="fas fa-times"></i>
@@ -68,20 +68,20 @@
           </div>
 
           <ul
-            class="flex flex-col items-start mt-16 pl-10 md:mt-0 md:pl-0 md:justify-between md:flex-row md:items-center gap-16"
+            class="flex flex-col items-center mt-44 md:mt-0 md:justify-between md:flex-row md:items-center gap-16"
           >
-            <li class="text-2xl hover:text-orange-500">
+            <li class="md:text-2xl text-4xl hover:text-orange-500">
               <a href="">Live Requests</a>
             </li>
-            <li class="text-2xl hover:text-orange-500">
+            <li class="md:text-2xl text-4xl hover:text-orange-500">
               <a href="">Visible Profiles</a>
             </li>
-            <li class="text-2xl hover:text-orange-500">
+            <li class="md:text-2xl text-4xl hover:text-orange-500">
               <a href="">User Group Slack</a>
             </li>
             <a href="">
               <li
-                class="rounded-[8rem] px-14 py-4 bg-[#F48C06] text-white text-xl shadow-xl hover:scale-105 active:scale-[0.8] transition ease-in-out"
+                class="rounded-[8rem] md:px-14 px-24 py-4 bg-[#F48C06] text-white md:text-xl text-4xl shadow-xl hover:scale-105 active:scale-[0.8] transition ease-in-out"
               >
                 Login
               </li>
@@ -90,7 +90,7 @@
         </nav>
 
         <section
-          class="flex lg:justify-between lg:flex-row flex-col items-center gap-12 mt-36 w-[110rem] mb-72 max-w-[60%]"
+          class="flex lg:justify-between lg:flex-row flex-col items-center gap-12 mt-36 w-[110rem] sm:mb-72 mb-44 max-w-[60%]"
         >
           <div
             data-aos="fade-right"
@@ -98,7 +98,7 @@
             class="flex-1 typeAnimation"
           >
             <div
-              class="writeit min-h-[18.5rem] text-center lg:text-left md:text-[3rem] text-[2.2rem] -mt-12 sm:mt-0 mb-8 sm:mb-0"
+              class="writeit min-h-[18.5rem] text-center lg:text-left md:text-[3rem] text-[2.2rem] -mt-12 sm:mt-0 mb-8 sm:mb-0 text-[#191453]"
             ></div>
             <p
               class="text-[#191453]-300 text-2xl leading-10 text-center lg:text-left"
@@ -300,7 +300,7 @@
               data-aos-easing="ease-in-sine"
               class="relative flex-1 lg:mt-0"
             >
-              <figure class="absolute top-10 left-0 -z-10 h-[30rem]">
+              <figure class="absolute top-10 left-0 -z-10 h-[65%]">
                 <img
                   src="./images/vector_12.png"
                   alt="Vector Curve"
@@ -392,8 +392,11 @@
               </li>
             </ul>
 
-            <div data-aos="zoom-in-up" class="flex-1">
-              <div class="flex justify-center">
+            <div
+              data-aos="zoom-in-up"
+              class="flex-1 flex justify-center items-center"
+            >
+              <!-- <div class="flex justify-center">
                 <figure class="w-[35rem] lg:w-full">
                   <img
                     src="./images/guy-with-phone.png"
@@ -401,6 +404,15 @@
                     loading="lazy"
                     class="h-full w-full"
                   />
+                </figure>
+              </div> -->
+
+              <div class="w-[30rem] lg:w-[45rem] relative">
+                <div
+                  class="h-[75%] w-[75%] absolute top-[20%] left-[18%] rounded-full bg-white -z-10 shadow-guyPhone"
+                ></div>
+                <figure class="h-full w-full">
+                  <img src="./images/guy.png" alt="" class="h-full w-full" />
                 </figure>
               </div>
             </div>
@@ -615,7 +627,7 @@
       <!------------------------------------------------------------------------->
       <section class="w-full pt-28 overflow-hidden">
         <div
-          class="w-[110rem] max-w-[90%] mx-auto flex lg:justify-between lg:flex-row flex-col mb-20 sm:mb-0"
+          class="w-[110rem] max-w-[90%] mx-auto flex lg:justify-between lg:flex-row flex-col"
         >
           <div
             data-aos="fade-right"
@@ -658,14 +670,16 @@
 
           <div
             data-aos="fade-left"
-            class="relative overflow-hidden sm:w-[47rem] w-[30rem] mx-auto"
+            class="relative overflow-hidden sm:w-[47rem] w-[35.5rem] mx-auto"
           >
-            <button
-              class="absolute h-[5rem] w-[10rem] top-[12rem] sm:left-[25.4rem] left-[20rem] z-10 border-none outline-none"
-              id="carousel-btn"
-            >
-              <img src="./images/icon-3.svg" alt="icon" loading="lazy" />
-            </button>
+            <div class="absolute z-50">
+              <button
+                class="absolute h-[5rem] w-[10rem] top-[12rem] sm:left-[25.4rem] left-[20rem] z-50 border-none outline-none"
+                id="carousel-btn"
+              >
+                <img src="./images/icon-3.svg" alt="icon" loading="lazy" />
+              </button>
+            </div>
 
             <div
               class="w-full flex gap-[7rem] carousel-container"
@@ -681,7 +695,7 @@
                   />
                 </figure>
                 <div
-                  class="self-end bg-white sm:w-[40rem] w-[30rem] shadow-client rounded-2xl px-12 py-8 border-l-8 border-orange-500 sm:translate-x-[15%] sm:-translate-y-40"
+                  class="self-end bg-white sm:w-[40rem] w-[30rem] shadow-client rounded-2xl px-12 py-8 border-l-8 border-orange-500 translate-x-[15%] -translate-y-40"
                 >
                   <p class="border-l-2 pl-8 py-4 text-xl leading-10 mb-12">
                     Lorem Ipsum is simply dummy text of the printing and
@@ -707,7 +721,7 @@
                   />
                 </figure>
                 <div
-                  class="self-end bg-white sm:w-[40rem] w-[30rem] shadow-client rounded-2xl px-12 py-8 border-l-8 border-orange-500 sm:translate-x-[15%] sm:-translate-y-40"
+                  class="self-end bg-white sm:w-[40rem] w-[30rem] shadow-client rounded-2xl px-12 py-8 border-l-8 border-orange-500 translate-x-[15%] -translate-y-40"
                 >
                   <p class="border-l-2 pl-8 py-4 text-xl leading-10 mb-12">
                     Lorem Ipsum is simply dummy text of the printing and
@@ -733,7 +747,7 @@
                   />
                 </figure>
                 <div
-                  class="self-end bg-white sm:w-[40rem] w-[30rem] shadow-client rounded-2xl px-12 py-8 border-l-8 border-orange-500 sm:translate-x-[15%] sm:-translate-y-40"
+                  class="self-end bg-white sm:w-[40rem] w-[30rem] shadow-client rounded-2xl px-12 py-8 border-l-8 border-orange-500 translate-x-[15%] -translate-y-40"
                 >
                   <p class="border-l-2 pl-8 py-4 text-xl leading-10 mb-12">
                     Lorem Ipsum is simply dummy text of the printing and
@@ -755,11 +769,13 @@
 
       <!--------------------- Charges Section Starts Here ---------------------->
       <!------------------------------------------------------------------------->
-      <section class="overflow-hidden">
+      <section>
         <div
           class="relative min-h-[30rem] flex justify-center items-center p-10 md:p-0 charges-container"
         >
-          <figure class="absolute top-0 left-0 h-full w-full">
+          <figure
+            class="md:flex hidden absolute top-0 left-0 -z-10 h-full w-full"
+          >
             <img
               src="./images/bg-black.png"
               alt="Background Dark Color"
@@ -770,7 +786,8 @@
 
           <div
             data-aos="zoom-in"
-            class="w-[110rem] max-w-[90%] mx-auto relative z-10 text-center text-white"
+            data-aos-duration="500"
+            class="w-[110rem] max-w-[90%] mx-auto text-center text-white py-12"
           >
             <h2 class="font-bold text-5xl mb-6">
               How we <span class="text-[#E18C5F]">Charge?</span>
@@ -797,6 +814,7 @@
       <div class="w-[110rem] max-w-[90%] mx-auto">
         <div
           data-aos="zoom-in-up"
+          data-aos-duration="700"
           class="flex justify-between gap-10 flex-wrap sm:my-36 my-20"
         >
           <div
@@ -970,7 +988,7 @@
               client: "2px 4px 60px rgba(41, 44, 124, 0.1)",
               iconSocial: "0px 2px 10px rgba(0, 0, 0, 0.1)",
               guyPhone:
-                "0px 92.691px 190.916px rgba(0, 0, 0, 0.07), 0px 34.2227px 72.2657px rgba(0, 0, 0, 0.0529883), 0px 14.8528px 33.8133px rgba(0, 0, 0, 0.0474983)",
+                "0px 92.691px 190.916px rgba(0, 0, 0, 0.07), 0px 34.2227px 72.2657px rgba(0, 0, 0, 0.0529883), 0px 14.8528px 33.8133px rgba(0, 0, 0, 0.0474983), 0px 6.04018px 15.9177px rgba(0, 0, 0, 0.0432167), 0px 1.8272px 6.64643px rgba(0, 0, 0, 0.0377011), 0px 0.132325px 1.94727px rgba(0, 0, 0, 0.0279548)",
             },
           },
         },
