show all page hover updated

--- a/show-all.html
+++ b/show-all.html
@@ -145,7 +145,7 @@
                     <div>
                       <img src="./Assets/images/service-provider.png" alt="service-provider" />
                     </div>
-                    <div class="pl-7 w-[100%]">
+                    <div class="pl-12 w-[100%]">
                       <p class="text-lg text-poppins"><span
                           class="text-clr_blue_light font-extrabold opacity-40 pr-1 text-poppins">Username: </span><span
                           class="text-clr_blue font-extrabold underline">Zhenhao Li</span></p>
@@ -162,7 +162,7 @@
                     </div>
                   </div>
                   <div class="md:w-[35%] w-[100%] text-right">
-                    <button class="bg-clr_blue text-xl py-3 px-6 text-white rounded-2xl shadow-btn">
+                    <button class="bg-clr_blue text-xl py-3 px-6 text-white rounded-2xl hover:shadow-btn">
                       Request a Pairing session
                     </button>
                   </div>
@@ -199,7 +199,7 @@
                     <div>
                       <img src="./Assets/images/service-provider-second.png" alt="service-provider" />
                     </div>
-                    <div class="pl-7 w-[100%]">
+                    <div class="pl-12 w-[100%]">
                       <p class="text-lg text-poppins"><span
                           class="text-clr_blue_light font-extrabold opacity-50 pr-1">Username: </span><span
                           class="text-clr_blue font-extrabold underline">Robert Hensing</span></p>
@@ -216,7 +216,7 @@
                     </div>
                   </div>
                   <div class="md:w-[35%] w-[100%] text-right">
-                    <button class="bg-clr_blue text-xl py-3 px-6 text-white rounded-2xl shadow-btn">
+                    <button class="bg-clr_blue text-xl py-3 px-6 text-white rounded-2xl hover:shadow-btn">
                       Request a Pairing session
                     </button>
                   </div>
