--- a/profile.html
+++ b/profile.html
@@ -117,11 +117,11 @@
               You can edit and update your profile
             </p>
 
-            <div class="flex gap-16">
-              <div class="left">
+            <div class="flex flex-col md:flex-row items-center md:items-start gap-16">
+              <div class="left w-full md:w-fit">
                 <div class="input-group">
                   <label class="block text-xl text-poppins text-clr_black font-semibold mb-4">Profile Photo</label>
-                  <div class="h-80 w-80 rounded-2xl mt-3 mb-6 bg-white"></div>
+                  <div class="h-96 md:h-80 w-full md:w-80 rounded-2xl mt-3 mb-6 bg-white"></div>
                 </div>
                 <div class="btns flex justify-center gap-4">
                   <button
@@ -135,12 +135,12 @@
                 </div>
               </div>
 
-              <div class="right flex-1">
-                <form class="lg:w-[70%] w-full">
+              <div class="right flex-1 w-full">
+                <form class="w-full md:w-[70%] w-full">
                   <div class="input-group mb-10">
                     <label for="" class="block text-xl text-clr_black mb-4 text-poppins font-semibold">The name you’ll
                       show to others</label>
-                    <input type="text" placeholder="Mudassar Haseeb"
+                    <input type="text" placeholder="Jamery Aver"
                       class="py-3 px-5 rounded-xl w-1/2 text-lg text-poppins placeholder-primary" />
                   </div>
 
