Font size issue

--- a/account.html
+++ b/account.html
@@ -50,28 +50,28 @@
             <li>
               <a href="create-post.html" class="flex items-center pl-10 py-8 hover:text-clr_blue">
                 <img src="./Assets/images/icon-10.svg" alt="Icon" loading="lazy" />
-                <span class="ml-4 text-poppins text-xl font-semibold">Create A Post</span>
+                <span class="ml-4 text-xl font-semibold">Create A Post</span>
               </a>
             </li>
 
             <li>
-              <a href="" class="flex items-center pl-10 py-8 hover:text-clr_blue">
+              <a href="service-profile.html" class="flex items-center pl-10 py-8 hover:text-clr_blue">
                 <img src="./Assets/images/icon-11.svg" alt="Icon" loading="lazy" />
-                <span class="ml-4 text-poppins text-xl font-semibold">Fill Out Your Service Profile</span>
+                <span class="ml-4 text-xl font-semibold">Fill Out Your Service Profile</span>
               </a>
             </li>
 
             <li>
               <a href="" class="flex items-center pl-10 py-8 hover:text-clr_blue">
                 <img src="./Assets/images/icon-12.svg" alt="Icon" loading="lazy" />
-                <span class="ml-4 text-poppins text-xl font-semibold">Live Request</span>
+                <span class="ml-4 text-xl font-semibold">Live Request</span>
               </a>
             </li>
 
             <li>
               <a href="show-all.html" class="flex items-center pl-10 py-8 hover:text-clr_blue">
                 <img src="./Assets/images/icon-13.svg" alt="Icon" loading="lazy" />
-                <span class="ml-4 text-poppins text-xl font-semibold">Visible Profiles</span>
+                <span class="ml-4 text-xl font-semibold">Visible Profiles</span>
               </a>
             </li>
 
@@ -90,7 +90,7 @@
           <div class="top h-[12vh] flex justify-between items-center">
             <div class="search-bar relative">
               <input type="text" placeholder="Search Anything"
-                class="w-96 pl-12 pr-4 py-4 text-lg rounded-2xl border-none outline-none text-poppins placeholder-primary" />
+                class="w-96 pl-12 pr-4 py-4 text-lg rounded-2xl border-none outline-none placeholder-primary" />
               <img src="./Assets/images/search.svg" alt="Search Icon" loading="lazy" class="absolute top-4 left-4" />
             </div>
 
@@ -111,38 +111,38 @@
             </div>
           </div>
           <div class="center h-[88vh]">
-            <p class="text-clr_black text-2xl text-poppins font-light">
+            <p class="text-clr_black text-2xl font-light">
               PairTime <span class="font-extrabold">></span> Account
             </p>
-            <p class="text-clr_black text-4xl text-poppins font-semibold mt-4 mb-6">
+            <p class="text-clr_black text-4xl font-semibold mt-4 mb-6">
               You don't have a billing address yet
             </p>
             <div class="border-b-[0.5px] opacity-60 w-3/5"></div>
-            <p class="text-clr_black text-xl text-poppins font-semibold mt-6 mb-8">
+            <p class="text-clr_black text-xl font-semibold mt-6 mb-8">
               You need to add it before you can buy or sell credits
             </p>
             <a href="create-billing.html">
               <button
-                class="bg-clr_blue text-xl py-3 px-8 text-white text-poppins font-semibold rounded-2xl hover:shadow-btn mb-20">
+                class="bg-clr_blue text-xl py-3 px-8 text-white font-semibold rounded-2xl hover:shadow-btn mb-20">
                 Create Billing Profile
               </button>
             </a>
-            <p class="text-clr_black text-4xl text-poppins font-semibold mb-6">
+            <p class="text-clr_black text-4xl font-semibold mb-6">
               You can donate your credit to the scholarship pool.
             </p>
             <div class="border-b-[0.5px] opacity-60 w-3/5"></div>
-            <p class="text-clr_black text-xl text-poppins font-semibold mt-6 mb-2">
+            <p class="text-clr_black text-xl font-semibold mt-6 mb-2">
               PairTime will run the program in a transparent way in the near
               Future.
             </p>
-            <p class="text-clr_black text-xl w-3/5 mb-4 text-poppins font-light">
+            <p class="text-clr_black text-xl w-3/5 mb-4 font-light">
               Note that each payout currency requires a separate onboarding
               and verification process. You can use the same Stripe account
               for different onboarding processes.
             </p>
             <a href="donate.html">
               <button
-                class="bg-clr_blue text-xl py-3 px-8 text-white text-poppins font-semibold rounded-2xl mr-4 hover:shadow-btn">
+                class="bg-clr_blue text-xl py-3 px-8 text-white font-semibold rounded-2xl mr-4 hover:shadow-btn">
                 Donate
               </button>
             </a>
