--- a/create-billing.html
+++ b/create-billing.html
@@ -49,28 +49,28 @@
             <li>
               <a href="create-post.html" class="flex items-center pl-10 py-8 hover:text-clr_blue">
                 <img src="./Assets/images/icon-10.svg" alt="Icon" loading="lazy" />
-                <span class="ml-4 text-poppins text-xl font-semibold">Create A Post</span>
+                <span class="ml-4  text-xl font-semibold">Create A Post</span>
               </a>
             </li>
 
             <li>
-              <a href="" class="flex items-center pl-10 py-8 hover:text-clr_blue">
+              <a href="service-profile.html" class="flex items-center pl-10 py-8 hover:text-clr_blue">
                 <img src="./Assets/images/icon-11.svg" alt="Icon" loading="lazy" />
-                <span class="ml-4 text-poppins text-xl font-semibold">Fill Out Your Service Profile</span>
+                <span class="ml-4  text-xl font-semibold">Fill Out Your Service Profile</span>
               </a>
             </li>
 
             <li>
               <a href="" class="flex items-center pl-10 py-8 hover:text-clr_blue">
                 <img src="./Assets/images/icon-12.svg" alt="Icon" loading="lazy" />
-                <span class="ml-4 text-poppins text-xl font-semibold">Live Request</span>
+                <span class="ml-4  text-xl font-semibold">Live Request</span>
               </a>
             </li>
 
             <li>
               <a href="show-all.html" class="flex items-center pl-10 py-8 hover:text-clr_blue">
                 <img src="./Assets/images/icon-13.svg" alt="Icon" loading="lazy" />
-                <span class="ml-4 text-poppins text-xl font-semibold">Visible Profiles</span>
+                <span class="ml-4  text-xl font-semibold">Visible Profiles</span>
               </a>
             </li>
 
@@ -89,7 +89,7 @@
           <div class="top h-[12vh] flex justify-between items-center md:ml-[230px]">
             <div class="search-bar relative">
               <input type="text" placeholder="Search Anything"
-                class="w-96 pl-12 pr-4 py-4 text-lg rounded-2xl border-none outline-none text-poppins placeholder-primary" />
+                class="w-96 pl-12 pr-4 py-4 text-lg rounded-2xl border-none outline-none placeholder-primary" />
               <img src="./Assets/images/search.svg" alt="Search Icon" loading="lazy" class="absolute top-4 left-4" />
             </div>
 
@@ -107,27 +107,27 @@
           </div>
 
           <div class="center mb-36 md:ml-[230px]">
-            <p class="text-clr_black text-2xl text-poppins font-light">
+            <p class="text-clr_black text-2xl  font-light">
               PairTime <span class="font-extrabold">></span> Account
               <span class="font-extrabold">></span> Create Billing Profile
             </p>
-            <p class="text-clr_black text-4xl text-poppins font-semibold mt-4 mb-6">
+            <p class="text-clr_black text-4xl  font-semibold mt-4 mb-6">
               This information is visible to only you and the platform.
             </p>
             <div class="border-b-[0.5px] opacity-60 w-3/5"></div>
 
             <form class="lg:w-3/5 w-[90%]">
-              <p class="text-clr_black text-xl text-poppins font-semibold mt-6 mb-8">
+              <p class="text-clr_black text-xl  font-semibold mt-6 mb-8">
                 We need this for tax calculation and invoicing.
               </p>
 
               <div class="input-group mb-4">
-                <label class="block text-xl text-clr_black text-poppins font-semibold mb-4">Country
+                <label class="block text-xl text-clr_black  font-semibold mb-4">Country
                 </label>
                 <div class="flex gap-4">
                   <input type="text" placeholder="find your country"
-                    class="py-3 px-5 rounded-xl w-2/5 text-lg text-poppins placeholder-primary" />
-                  <select class="py-3 px-5 rounded-xl text-lg w-3/5 placeholder-primary text-poppins">
+                    class="py-3 px-5 rounded-xl w-2/5 text-lg  placeholder-primary" />
+                  <select class="py-3 px-5 rounded-xl text-lg w-3/5 placeholder-primary ">
                     <option value="">United Arab Emirates</option>
                     <option value="">United States of America</option>
                     <option value="">Saudi Arabia</option>
@@ -135,17 +135,17 @@
                 </div>
               </div>
 
-              <p class="text-clr_black text-xl mb-6 text-poppins font-light">
+              <p class="text-clr_black text-xl mb-6  font-light">
                 If your country is not among the list, that means Stripe
                 doesn't support it. We are working on supporting more
                 countries.
               </p>
 
               <div class="input-group mb-8">
-                <label class="block text-xl text-clr_black text-poppins font-semibold mb-4">Account Type
+                <label class="block text-xl text-clr_black  font-semibold mb-4">Account Type
                 </label>
 
-                <select class="py-3 px-5 rounded-xl text-xl w-2/5 text-lg text-poppins placeholder-primary">
+                <select class="py-3 px-5 rounded-xl text-xl w-2/5 text-lg  placeholder-primary">
                   <option value="">Individual</option>
                   <option value="">Group</option>
                 </select>
@@ -153,64 +153,64 @@
 
               <div class="input-group mb-8 flex gap-2">
                 <div class="flex-1">
-                  <label class="block text-xl text-clr_black text-poppins font-semibold mb-4">First Name
+                  <label class="block text-xl text-clr_black  font-semibold mb-4">First Name
                   </label>
                   <input type="text" placeholder="Mudassar"
-                    class="py-3 px-5 rounded-xl w-full text-lg text-poppins placeholder-primary" />
+                    class="py-3 px-5 rounded-xl w-full text-lg  placeholder-primary" />
                 </div>
                 <div class="flex-1">
-                  <label class="block text-xl text-clr_black text-poppins font-semibold mb-4">Last Name
+                  <label class="block text-xl text-clr_black  font-semibold mb-4">Last Name
                   </label>
                   <input type="text" placeholder="Haseeb"
-                    class="py-3 px-5 rounded-xl w-full text-lg text-poppins placeholder-primary" />
+                    class="py-3 px-5 rounded-xl w-full text-lg  placeholder-primary" />
                 </div>
               </div>
 
               <div class="input-group mb-8 flex gap-2">
                 <div class="flex-1">
-                  <label class="block text-xl text-clr_black text-poppins font-semibold mb-4">Address Line 1
+                  <label class="block text-xl text-clr_black  font-semibold mb-4">Address Line 1
                   </label>
                   <input type="text" placeholder="Mudassar"
-                    class="py-3 px-5 rounded-xl w-full text-lg text-poppins placeholder-primary" />
+                    class="py-3 px-5 rounded-xl w-full text-lg  placeholder-primary" />
                 </div>
                 <div class="flex-1">
-                  <label class="block text-xl text-clr_black text-poppins font-semibold mb-4">Address Line 2
+                  <label class="block text-xl text-clr_black  font-semibold mb-4">Address Line 2
                   </label>
                   <input type="text" placeholder="Haseeb"
-                    class="py-3 px-5 rounded-xl w-full text-lg text-poppins placeholder-primary" />
+                    class="py-3 px-5 rounded-xl w-full text-lg  placeholder-primary" />
                 </div>
               </div>
 
               <div class="input-group mb-8 flex gap-2">
                 <div class="w-3/4">
-                  <label class="block text-xl text-clr_black text-poppins font-semibold mb-4">City
+                  <label class="block text-xl text-clr_black  font-semibold mb-4">City
                   </label>
                   <input type="text" placeholder="Lahore"
-                    class="py-3 px-5 rounded-xl w-full text-lg text-poppins placeholder-primary" />
+                    class="py-3 px-5 rounded-xl w-full text-lg  placeholder-primary" />
                 </div>
                 <div class="w-1/4">
-                  <label class="block lg:text-xl text-lg text-clr_black text-poppins font-semibold mb-4">ZIP
+                  <label class="block lg:text-xl text-lg text-clr_black  font-semibold mb-4">ZIP
                     code/Postcode
                   </label>
                   <input type="text" placeholder="51000"
-                    class="py-3 px-5 rounded-xl w-full text-lg text-poppins placeholder-primary" />
+                    class="py-3 px-5 rounded-xl w-full text-lg  placeholder-primary" />
                 </div>
               </div>
 
               <div class="input-group mb-8">
                 <div>
                   <label
-                    class="text-xl text-clr_black text-poppins font-semibold mb-4 flex justify-between">State/Province/Region
+                    class="text-xl text-clr_black  font-semibold mb-4 flex justify-between">State/Province/Region
                     <span class="opacity-[0.5] text-[11px]">You can leave it empty if it doesn’t apply to
                       you.</span>
                   </label>
 
                   <input type="text" placeholder="Punjab"
-                    class="py-3 px-5 rounded-xl w-full text-lg text-poppins placeholder-primary" />
+                    class="py-3 px-5 rounded-xl w-full text-lg  placeholder-primary" />
                 </div>
               </div>
 
-              <button class="bg-clr_blue text-xl py-3 px-8 text-poppins text-white rounded-2xl mr-4 hover:shadow-btn">
+              <button class="bg-clr_blue text-xl py-3 px-8  text-white rounded-2xl mr-4 hover:shadow-btn">
                 Save
               </button>
             </form>
