--- a/dashboard.html
+++ b/dashboard.html
@@ -51,28 +51,28 @@
             <li>
               <a href="create-post.html" class="flex items-center pl-10 py-8 hover:text-clr_blue">
                 <img src="./Assets/images/icon-10.svg" alt="Icon" loading="lazy" />
-                <span class="ml-4 text-poppins text-xl font-semibold">Create A Post</span>
+                <span class="ml-4  text-xl font-semibold">Create A Post</span>
               </a>
             </li>
 
             <li>
               <a href="" class="flex items-center pl-10 py-8 hover:text-clr_blue">
                 <img src="./Assets/images/icon-11.svg" alt="Icon" loading="lazy" />
-                <span class="ml-4 text-poppins text-xl font-semibold">Fill Out Your Service Profile</span>
+                <span class="ml-4  text-xl font-semibold">Fill Out Your Service Profile</span>
               </a>
             </li>
 
             <li>
               <a href="" class="flex items-center pl-10 py-8 hover:text-clr_blue">
                 <img src="./Assets/images/icon-12.svg" alt="Icon" loading="lazy" />
-                <span class="ml-4 text-poppins text-xl font-semibold">Live Request</span>
+                <span class="ml-4  text-xl font-semibold">Live Request</span>
               </a>
             </li>
 
             <li>
               <a href="show-all.html" class="flex items-center pl-10 py-8 hover:text-clr_blue">
                 <img src="./Assets/images/icon-13.svg" alt="Icon" loading="lazy" />
-                <span class="ml-4 text-poppins text-xl font-semibold">Visible Profiles</span>
+                <span class="ml-4  text-xl font-semibold">Visible Profiles</span>
               </a>
             </li>
 
@@ -91,10 +91,9 @@
           <div class="top h-[12vh] flex justify-between items-center">
             <div class="search-bar relative">
               <input type="text" placeholder="Search Anything"
-                class="w-96 pl-12 pr-4 py-4 text-lg rounded-2xl border-none outline-none text-poppins placeholder-primary" />
+                class="w-96 pl-12 pr-4 py-4 text-lg rounded-2xl border-none outline-none  placeholder-primary" />
               <img src="./Assets/images/search.svg" alt="Search Icon" loading="lazy" class="absolute top-4 left-4" />
             </div>
-
             <div class="user flex gap-8 items-center">
               <a href="account.html" class="hover:shadow-btn hidden md:block">
                 <img src="./Assets/images/icon-17.svg" alt="Icon" loading="lazy" />
@@ -110,24 +109,24 @@
 
           <div class="center h-[88vh] flex justify-center items-center">
             <div class="content text-center flex flex-col items-center relative">
-              <p class="text-[#707EAE] font-bold text-4xl py-2 text-poppins">
+              <p class="text-[#707EAE] font-bold text-4xl py-2 ">
                 Hi, Jorje Doe
               </p>
-              <p class="text-[#191453] text-6xl font-bold py-2 text-poppins">
+              <p class="text-[#191453] text-6xl font-bold py-2 ">
                 Welcome to
               </p>
-              <p class="text-[#e18c5f] text-5xl font-bold py-2 mb-2 text-poppins">
+              <p class="text-[#e18c5f] text-5xl font-bold py-2 mb-2 ">
                 PairTime
               </p>
               <a href="create-post.html">
                 <button
-                  class="bg-clr_blue text-white text-xl font-semibold flex items-center py-4 px-6 rounded-2xl gap-4 hover:shadow-btn text-poppins">
+                  class="bg-clr_blue text-white text-xl font-semibold flex items-center py-4 px-6 rounded-2xl gap-4 hover:shadow-btn ">
                   <img src="./Assets/images/icon-10.svg" alt="Icon" loading="lazy" class="brightness-0 invert" />
                   Create A Post
                 </button>
               </a>
-              <a href=""
-                class="text-poppins text-[#5A5881] font-semibold text-xl underline py-4 hover:text-clr_blue">Create
+              <a href="service-profile.html"
+                class=" text-[#5A5881] font-semibold text-xl underline py-4 hover:text-clr_blue">Create
                 Service Profile</a>
 
               <div class="absolute -right-60 -top-8">
