--- a/donate.html
+++ b/donate.html
@@ -47,28 +47,28 @@
             <li>
               <a href="create-post.html" class="flex items-center pl-10 py-8 hover:text-clr_blue">
                 <img src="./Assets/images/icon-10.svg" alt="Icon" loading="lazy" />
-                <span class="ml-4 text-poppins text-xl font-semibold">Create A Post</span>
+                <span class="ml-4  text-xl font-semibold">Create A Post</span>
               </a>
             </li>
 
             <li>
-              <a href="" class="flex items-center pl-10 py-8 hover:text-clr_blue">
+              <a href="service-profile.html" class="flex items-center pl-10 py-8 hover:text-clr_blue">
                 <img src="./Assets/images/icon-11.svg" alt="Icon" loading="lazy" />
-                <span class="ml-4 text-poppins text-xl font-semibold">Fill Out Your Service Profile</span>
+                <span class="ml-4  text-xl font-semibold">Fill Out Your Service Profile</span>
               </a>
             </li>
 
             <li>
               <a href="" class="flex items-center pl-10 py-8 hover:text-clr_blue">
                 <img src="./Assets/images/icon-12.svg" alt="Icon" loading="lazy" />
-                <span class="ml-4 text-poppins text-xl font-semibold">Live Request</span>
+                <span class="ml-4  text-xl font-semibold">Live Request</span>
               </a>
             </li>
 
             <li>
               <a href="show-all.html" class="flex items-center pl-10 py-8 hover:text-clr_blue">
                 <img src="./Assets/images/icon-13.svg" alt="Icon" loading="lazy" />
-                <span class="ml-4 text-poppins text-xl font-semibold">Visible Profiles</span>
+                <span class="ml-4  text-xl font-semibold">Visible Profiles</span>
               </a>
             </li>
 
@@ -87,7 +87,7 @@
           <div class="top h-[12vh] flex justify-between items-center">
             <div class="search-bar relative">
               <input type="text" placeholder="Search Anything"
-                class="w-96 pl-12 pr-4 py-4 text-lg rounded-2xl border-none outline-none text-poppins placeholder-primary" />
+                class="w-96 pl-12 pr-4 py-4 text-lg rounded-2xl border-none outline-none  placeholder-primary" />
               <img src="./Assets/images/search.svg" alt="Search Icon" loading="lazy" class="absolute top-4 left-4" />
             </div>
 
@@ -105,23 +105,23 @@
           </div>
 
           <div class="center h-[88vh]">
-            <p class="text-clr_black text-2xl text-poppins font-light">
+            <p class="text-clr_black text-2xl  font-light">
               PairTime <span class="font-extrabold">></span> Account
               <span class="font-extrabold">></span> Donate
             </p>
-            <p class="text-clr_black text-4xl text-poppins font-semibold mt-4 mb-6">
+            <p class="text-clr_black text-4xl  font-semibold mt-4 mb-6">
               Donate to the scholarship pool.
             </p>
             <div class="border-b-[0.5px] opacity-60 w-3/5"></div>
-            <p class="text-clr_black text-xl text-poppins font-semibold mt-6 mb-8">
+            <p class="text-clr_black text-xl  font-semibold mt-6 mb-8">
               Select Currency and you can directly donate the amount.
             </p>
 
             <div class="input-group mb-10">
-              <label class="block text-xl text-clr_black text-poppins font-semibold mb-2">Currency Type
+              <label class="block text-xl text-clr_black  font-semibold mb-2">Currency Type
               </label>
               <div class="flex gap-4">
-                <select class="py-3 px-4 rounded-xl text-gl text-poppins placeholder-primary w-1/5">
+                <select class="py-3 px-4 rounded-xl text-gl  placeholder-primary w-1/5">
                   <option value="">USD</option>
                   <option value="">CAD</option>
                   <option value="">EUR</option>
@@ -131,7 +131,7 @@
               </div>
             </div>
 
-            <button class="bg-clr_blue text-xl text-poppins py-3 px-8 text-white rounded-2xl hover:shadow-btn">
+            <button class="bg-clr_blue text-xl  py-3 px-8 text-white rounded-2xl hover:shadow-btn">
               Donate
             </button>
           </div>
