--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="./Assets/styles/styles.css" />
+    <link rel="stylesheet" href="./Assets/styles/index.css" />
     <title>Pair Time</title>
   </head>
 
