--- a/visible-profile.html
+++ b/visible-profile.html
@@ -80,7 +80,7 @@
 
               <li>
                 <a
-                  href=""
+                  href="service-profile.html"
                   class="flex items-center pl-10 py-8 hover:text-clr_blue"
                 >
                   <img src="./Assets/images/icon-11.svg" alt="Icon" loading="lazy" />
