--- a/profile.html
+++ b/profile.html
@@ -52,28 +52,28 @@
             <li>
               <a href="create-post.html" class="flex items-center pl-10 py-8 hover:text-clr_blue">
                 <img src="./Assets/images/icon-10.svg" alt="Icon" loading="lazy" />
-                <span class="ml-4 text-poppins text-xl font-semibold">Create A Post</span>
+                <span class="ml-4  text-xl font-semibold">Create A Post</span>
               </a>
             </li>
 
             <li>
               <a href="" class="flex items-center pl-10 py-8 hover:text-clr_blue">
                 <img src="./Assets/images/icon-11.svg" alt="Icon" loading="lazy" />
-                <span class="ml-4 text-poppins text-xl font-semibold">Fill Out Your Service Profile</span>
+                <span class="ml-4  text-xl font-semibold">Fill Out Your Service Profile</span>
               </a>
             </li>
 
             <li>
               <a href="" class="flex items-center pl-10 py-8 hover:text-clr_blue">
                 <img src="./Assets/images/icon-12.svg" alt="Icon" loading="lazy" />
-                <span class="ml-4 text-poppins text-xl font-semibold">Live Request</span>
+                <span class="ml-4  text-xl font-semibold">Live Request</span>
               </a>
             </li>
 
             <li>
               <a href="show-all.html" class="flex items-center pl-10 py-8 hover:text-clr_blue">
                 <img src="./Assets/images/icon-13.svg" alt="Icon" loading="lazy" />
-                <span class="ml-4 text-poppins text-xl font-semibold">Visible Profiles</span>
+                <span class="ml-4  text-xl font-semibold">Visible Profiles</span>
               </a>
             </li>
 
@@ -92,7 +92,7 @@
           <div class="top h-[12vh] flex justify-between items-center">
             <div class="search-bar relative">
               <input type="text" placeholder="Search Anything"
-                class="w-96 pl-12 pr-4 py-4 text-lg rounded-2xl border-none outline-none text-poppins placeholder-primary" />
+                class="w-96 pl-12 pr-4 py-4 text-lg rounded-2xl border-none outline-none  placeholder-primary" />
               <img src="./Assets/images/search.svg" alt="Search Icon" loading="lazy" class="absolute top-4 left-4" />
             </div>
 
@@ -110,26 +110,26 @@
           </div>
 
           <div class="center h-[88vh]">
-            <p class="text-clr_black text-2xl text-poppins font-light">
+            <p class="text-clr_black text-2xl  font-light">
               PairTime <span class="font-extrabold">></span> Profile
             </p>
-            <p class="text-clr_black text-4xl text-poppins font-semibold mt-4 mb-16">
+            <p class="text-clr_black text-4xl  font-semibold mt-4 mb-16">
               You can edit and update your profile
             </p>
 
             <div class="flex flex-col md:flex-row items-center md:items-start gap-16">
               <div class="left w-full md:w-fit">
                 <div class="input-group">
-                  <label class="block text-xl text-poppins text-clr_black font-semibold mb-4">Profile Photo</label>
+                  <label class="block text-xl  text-clr_black font-semibold mb-4">Profile Photo</label>
                   <div class="h-96 md:h-80 w-full md:w-80 rounded-2xl mt-3 mb-6 bg-white"></div>
                 </div>
                 <div class="btns flex justify-center gap-4">
                   <button
-                    class="bg-clr_blue text-xl py-2 px-8 text-white rounded-3xl hover:shadow-btn text-poppins font-semibold">
+                    class="bg-clr_blue text-xl py-2 px-8 text-white rounded-3xl hover:shadow-btn  font-semibold">
                     Edit
                   </button>
                   <button
-                    class="bg-[#FF3D00] text-xl py-2 px-5 text-white rounded-3xl hover:shadow-btn text-poppins font-semibold">
+                    class="bg-[#FF3D00] text-xl py-2 px-5 text-white rounded-3xl hover:shadow-btn  font-semibold">
                     Delete
                   </button>
                 </div>
@@ -138,28 +138,28 @@
               <div class="right flex-1 w-full">
                 <form class="w-full md:w-[70%] w-full">
                   <div class="input-group mb-10">
-                    <label for="" class="block text-xl text-clr_black mb-4 text-poppins font-semibold">The name you’ll
+                    <label for="" class="block text-xl text-clr_black mb-4  font-semibold">The name you’ll
                       show to others</label>
                     <input type="text" placeholder="Jamery Aver"
-                      class="py-3 px-5 rounded-xl w-1/2 text-lg text-poppins placeholder-primary" />
+                      class="py-3 px-5 rounded-xl w-1/2 text-lg  placeholder-primary" />
                   </div>
 
                   <div class="input-group mb-10">
-                    <label for="" class="text-xl text-clr_black mb-4 text-poppins font-semibold flex justify-between">A
+                    <label for="" class="text-xl text-clr_black mb-4  font-semibold flex justify-between">A
                       short biography (optional)
                       <span>You have 72/100 in Bio.</span></label>
                     <textarea type="text" placeholder="I’m full stack designer"
-                      class="py-3 px-5 rounded-xl w-full text-lg block h-32 placeholder-primary text-poppins"></textarea>
+                      class="py-3 px-5 rounded-xl w-full text-lg block h-32 placeholder-primary "></textarea>
                   </div>
 
                   <div class="input-group mb-10">
-                    <label for="" class="block text-xl text-clr_black mb-4 text-poppins font-semibold">Default time zone
+                    <label for="" class="block text-xl text-clr_black mb-4  font-semibold">Default time zone
                       (optional)
                     </label>
                     <div class="flex gap-4">
                       <input type="text" placeholder="find time zone"
-                        class="py-3 px-5 rounded-xl w-3/5 text-lg placeholder-primary text-poppins" />
-                      <select class="py-3 px-5 rounded-xl text-lg w-2/5 text-poppins text-[#191453]">
+                        class="py-3 px-5 rounded-xl w-3/5 text-lg placeholder-primary " />
+                      <select class="py-3 px-5 rounded-xl text-lg w-2/5  text-[#191453]">
                         <option value="">
                           Asia/Karachi (currently +5:00)
                         </option>
@@ -175,11 +175,11 @@
 
                   <div class="btns text-right mt-16">
                     <button
-                      class="bg-clr_blue text-xl py-3 px-8 text-white rounded-2xl mr-4 text-poppins font-semibold hover:shadow-btn">
+                      class="bg-clr_blue text-xl py-3 px-8 text-white rounded-2xl mr-4  font-semibold hover:shadow-btn">
                       Update
                     </button>
                     <button
-                      class="bg-[#ECECEC] text-xl py-3 px-8 text-[#A6A6A6] rounded-2xl text-poppins font-semibold hover:shadow-btn">
+                      class="bg-[#ECECEC] text-xl py-3 px-8 text-[#A6A6A6] rounded-2xl  font-semibold hover:shadow-btn">
                       Cancel
                     </button>
                   </div>
